config/istio-ingressgateway.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "ext-authz-server-policy"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: CUSTOM
  provider:
    name: "ext-authz-server"
  rules:
  - to:
    - operation:
        paths: ["*"]
---
